# agent-notify

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  codecov.yml
.cursor/agents/: dependabot-config.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
clients/typescript/agent-notify-cli/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/agent-notify-cli/src/: client.ts  hostname.ts  index.ts
clients/typescript/agent-notify-cli/test/: client.test.ts  hostname.test.ts  index.test.ts
crates/agent-notify-bridge/: Cargo.toml  build.rs
crates/agent-notify-bridge/resources/: agent-notify-bridge.exe.manifest  agent-notify-bridge.rc
crates/agent-notify-bridge/src/: display.rs  hid_broker.rs  icons.rs  ipc.rs  lib.rs  main.rs  settings.rs  tray.rs  uhk.rs  url.rs  worker.rs
crates/agent-notify-cli/: Cargo.toml
crates/agent-notify-cli/src/: main.rs
crates/agent-notify-core/: Cargo.toml
crates/agent-notify-core/src/: lib.rs
crates/agent-notify-server/: Cargo.toml
crates/agent-notify-server/src/: main.rs
packaging/windows/: README.md  agent-notify-bridge.iss
packaging/winget/: README.md
packaging/winget/glslang.agent-notify-bridge/0.1.0/: glslang.agent-notify-bridge.yaml
