[workspace]
members = [
    "crates/agent-notify-bridge",
    "crates/agent-notify-cli",
    "crates/agent-notify-core",
    "crates/agent-notify-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/goncalo/agent-notify"

[workspace.dependencies]
agent-notify-core = { path = "crates/agent-notify-core" }
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["ws"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
directories = "6.0.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
toml = "0.9.8"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
