[package]
name = "agent-notify-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent-notify-core.workspace = true
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(windows)'.dependencies]
# Windows tray menus use tray-icon Win32 backends; no GTK dependency.
#
# tray-icon/muda optionally enable GTK *3* (crate `gtk` 0.x) on BSD/Linux; that pulls older
# `glib` and has tripped GHSA-wrw7-89jp-8q8g in the unified lockfile, so defaults stay off.
#
# If the bridge ever grows a GTK-based UI on Unix, wire **gtk4-rs** (`gtk4`/`libadwaita`, etc.);
# there is still no GTK4 backend in crates.io tray-icon/muda as of tray-icon 0.24—track upstream or
# keep non-GTK event loops until one lands.
hidapi = { version = "2.6.5", default-features = false, features = ["windows-native"] }
# Decodes the embedded state .ico files to RGBA for tray-icon (`Icon::from_rgba`).
ico = "0.5"
tray-icon = { version = "0.24", default-features = false, features = ["common-controls-v6"] }
# Reads the SystemUsesLightTheme registry value to pick the light/dark tray icon set.
windows-sys = { version = "0.61", features = ["Win32_System_Registry", "Win32_Foundation"] }
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

[build-dependencies]
embed-resource = "3.0.9"
